===== 2.0 (Jul ??, 2014) =====
* Uses ACCESS_NETWORK_STATE permission to detect if device is connected to the internet over WiFi
* Download from OPDS for all supported file types
* Tags and authors editing
* Updated Bulgarian localization (by Георги Георгиев)
* Updated Czech localization (by Marek Pavelka)
* Updated German localization (by Matthias Dill)
* Updated Romanian localization (by girlea_alex@yahoo.com)

===== 1.10.3.2 (Jun 09, 2014) =====
* ePub styles: decreased default spacings

===== 1.10.3 (Jun 08, 2014) =====
* ePub loading speed optimizations
* ePub: added support for CSS margin-top/margin-bottom properties
* ePub: fixed empty line support in <pre>-formatted text
* New CSS-like style for default style definitions
* better cover detection for ePubs
* fixed possible crash on ePub files updated while program is running
* Arabic FBReaderJ resources, by Ahmed Saidi (https://github.com/boussouira)
* Updated German localization (by Matthias Dill)

===== 1.10.2 (May 25, 2014) =====
* Fixed local library duplicates issue
* Updated German localization (by Matthias Dill)

===== 1.10.1 (May 09, 2014) =====
* Multiple locations for books, fonts and backgrounds
* Updated German localization (by Matthias Dill)
* Updated Czech localization (by Marek Pavelka)
* Experimental support for opds authentication (like oauth/oauth2)

===== 1.10.0.5 (Apr 22, 2014) =====
* Fixed crash on unexisting function (LinkedList.push()) for devices with SDK <= 8
* Fixed problem with fullscreen mode warning (it was not possible to dismiss it on some devices)
* Save book position in background

===== 1.10.0.4 (Apr 21, 2014) =====
* Fixed metrics == null issue
* Fixed yota-specific class cast exception
* Fixed NPE in FontEntry.equals()
* Fixed NPE in ZLTextPlainModel.getTextLength()
* Fixed skip operation on non-compressed zips
* Fixed possible AOOB in text model

===== 1.10.0.3 (Apr 21, 2014) =====
* Fixed duplicate processing for some CSS properties

===== 1.10.0.2 (Apr 21, 2014) =====